2003-10-30  Niklas Knutsson  <nq@altern.org>

	* Giac might actually return -1*1 (we prefer -1)
	* Catch giac errors
	* Define tan, asinh, acosh, atanh as sin(x)/cos(x), log(x+sqrt(x^2+1)), ...
	* Handle pi correctly in trigonometric functions
	* Delay calculation of inexact values
	* New variable manager

2003-10-29  Niklas Knutsson  <nq@altern.org>

	* Giac function
	* Factorize in result menu
	* New functions: diff, integrate, solve
	* Giac support
	* Do not crash when printing a manager with matrix

2003-10-27  Niklas Knutsson  <nq@altern.org>
	
	* Release Qalculate-GTK version 0.3.1
	* Left over missing setPrecise() in builtin functions
	* Fix printing of function manager
	* Fix display of only number in numerator
	* Parenthesis adjustments
	* Update swedish translation
	* More extensive error handling for misplaced operators
	* Replace "**" with "^"
	* Fix parenthesis in Manager::print()
	* Recreated Manager::print() from gtk drawing function
	* Optional prefix for denominator
	* Reworked composite unit printing
	* Reworked prefix handling
	* Reworked drawing of MULTIPLICATION_MANAGER
	* Fix loadLocalDefinitions()
	* Year and Century units
	* Fix parsec, light year, astronomical unit, and torr
	* Plural fixes
	* Draw unit names with "_" replaced by space

2003-10-24  Niklas Knutsson  <nq@altern.org>

	* Compability fixes for Unit.cc
	* change strold to strol in HEX()
	* remove ld2s()
	* provide another workaround for strptime
	* some warnings left
	* remove llpow() as it only creates problems
	* __USE_XOPEN for strptime
	* Replace insert(0, 1, ...) with insert(begin(), 1, ...)
	* Fix ALL warnings
	* Ignore blanks in BIN(), OCT(), HEX(), BASE()
	* Fix number bases dialog

2003-10-23  Niklas Knutsson  <nq@altern.org>

	* Do not use scandir as Solaris does not support it
	* Access hash_map header properly
	* Update POTFILES.in for new glade files
	* Remove #include <ext/hash_map> from Calculator.h

2003-10-22  Niklas Knutsson  <nq@altern.org>
