@@ -86,6 +86,7 @@ DECLARE_BUILTIN_FUNCTION(AsinhFunction);
 DECLARE_BUILTIN_FUNCTION(AcoshFunction);
 DECLARE_BUILTIN_FUNCTION(AtanhFunction);
 DECLARE_BUILTIN_FUNCTION(LogFunction);
+DECLARE_BUILTIN_FUNCTION(LognFunction);
 DECLARE_BUILTIN_FUNCTION(Log10Function);
 DECLARE_BUILTIN_FUNCTION(Log2Function);
 DECLARE_BUILTIN_FUNCTION(ExpFunction);
